# vero

./: LICENSE  README.md  main.py  pyproject.toml
examples/agents/: main.py
tests/: test_chat_openai.py  test_message.py  test_tool.py
vero/agents/: __init__.py  openai_function_agent.py  react_agent.py  simple_agent.py
vero/config/: config.py
vero/core/: __init__.py  agent.py  chat_openai.py  exceptions.py  message.py
vero/tool/: tool.py
vero/tool/buildin/: __init__.py  ddg_search.py  math_calculator.py
