[project]
name = "vero"
version = "0.1.0"
description = "A lightweight framework for building LLM-based intelligent agents from scratch using the OpenAI API."
authors = [{ name = "greyfoss", email = "jueying.szu@gmail.com" }]  
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.9.3",
    "openai>=1.0.0,<2.0.0",
    "pydantic-settings==2.12.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["vero"]
